--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,18 +1,4 @@
-@font-face {
-  font-family: 'playfair';
-  src: url('../fonts/playfair/playfairdisplaysc-bolditalic-webfont.woff2') format('woff2'),
-  url('../fonts/playfair/playfairdisplaysc-bolditalic-webfont.woff') format('woff');
-  font-weight: normal;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'grand_hotelregular';
-  src: url('../fonts/grandhotel/grandhotel-regular-webfont.woff2') format('woff2'),
-  url('../fonts/grandhotel/grandhotel-regular-webfont.woff') format('woff');
-  font-weight: normal;
-  font-style: normal;
-}
+ @import "../fonts/fonts.scss";
 
 #title_cameras {
   display: flex;
@@ -31,8 +17,17 @@
       width: 20em;
       background: slategrey;
     }
+    & h1 {
+      font-size: 6.5rem;
+    }
 }
 
 #corps_page {
   height: 100%;
+}
+
+#cards_container{
+  & div.card {
+    padding: 0!important;
+  }
 }
