--- a/panier/sass/style.scss
+++ b/panier/sass/style.scss
@@ -13,7 +13,7 @@
       width: 50%;
       margin-top: 5em;
       padding: 1em;
-      box-shadow: 0px 2px 8px 5px rgba(0, 0, 0, 0.15);
+      box-shadow: 0 2px 8px 5px rgba(0, 0, 0, 0.15);
     }
   }
   & > #form_part {
@@ -23,7 +23,35 @@
       width: 50%;
       margin-top: 5em;
       padding: 1em;
-      box-shadow: 0px 2px 8px 5px rgba(0, 0, 0, 0.15);
+      box-shadow: 0 2px 8px 5px rgba(0, 0, 0, 0.15);
     }
   }
+  & > #message_vide > p {
+    font: bold 50px arial, sans-serif;
+    background-color: #565656;
+    color: transparent;
+    text-shadow: 2px 2px 3px rgba(255,255,255,0.5);
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    background-clip: text;
+    margin-top: 4em;
+  }
+  & > div#validation {
+    box-shadow: 0 0 9px 0 rgba(0,0,0,0.75);
+    width: 50%;
+    background-color: white;
+    & > h1.h1Cust {
+      font-size: 50px;
+      font-family: "fulbo";
+    }
+    & > button.btn > a {
+      text-decoration: none;
+    }
+  }
+}
+
+footer.page-footer{
+  bottom:0;
+  width:100%;
+  height: 1em;
 }
