--- a/fonts/fonts.scss
+++ b/fonts/fonts.scss
@@ -1,23 +1,23 @@
 @font-face {
   font-family: 'playfair';
-  src: url('../fonts/playfair/playfairdisplaysc-bolditalic-webfont.woff2') format('woff2'),
-  url('../fonts/playfair/playfairdisplaysc-bolditalic-webfont.woff') format('woff');
+  src: url('./playfair/playfairdisplaysc-bolditalic-webfont.woff2') format('woff2'),
+  url('./playfair/playfairdisplaysc-bolditalic-webfont.woff') format('woff');
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'grand_hotelregular';
-  src: url('../fonts/grandhotel/grandhotel-regular-webfont.woff2') format('woff2'),
-  url('../fonts/grandhotel/grandhotel-regular-webfont.woff') format('woff');
+  src: url('./grandhotel/grandhotel-regular-webfont.woff2') format('woff2'),
+  url('./grandhotel/grandhotel-regular-webfont.woff') format('woff');
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'fulbo';
-  src: url('../fonts/fulbo/fulbo-premier-webfont.woff2') format('woff2'),
-  url('../fonts/fulbo/fulbo-premier-webfont.woff') format('woff');
+  src: url('./fulbo/fulbo-premier-webfont.woff2') format('woff2'),
+  url('./fulbo/fulbo-premier-webfont.woff') format('woff');
   font-weight: normal;
   font-style: normal;
 }
