--- a/panier/css/style.css
+++ b/panier/css/style.css
@@ -1,71 +1,144 @@
 @font-face {
-  font-family: "playfair";
-  src: url("../../fonts/playfair/playfairdisplaysc-bolditalic-webfont.woff2") format("woff2"), url("../../fonts/playfair/playfairdisplaysc-bolditalic-webfont.woff") format("woff");
-  font-weight: normal;
-  font-style: normal;
-}
-@font-face {
   font-family: "grand_hotelregular";
-  src: url("../../fonts/grandhotel/grandhotel-regular-webfont.woff2") format("woff2"), url("../../fonts/grandhotel/grandhotel-regular-webfont.woff") format("woff");
+  src: url("../fonts/grandhotel/grandhotel-regular-webfont.woff2") format("woff2"), url("../fonts/grandhotel/grandhotel-regular-webfont.woff") format("woff");
   font-weight: normal;
   font-style: normal;
 }
 @font-face {
   font-family: "fulbo";
-  src: url("../../fonts/fulbo/fulbo-premier-webfont.woff2") format("woff2"), url("../../fonts/fulbo/fulbo-premier-webfont.woff") format("woff");
+  src: url("../fonts/fulbo/fulbo-premier-webfont.woff2") format("woff2"), url("../fonts/fulbo/fulbo-premier-webfont.woff") format("woff");
   font-weight: normal;
   font-style: normal;
 }
 #page_total h1 {
-  font-family: "grand_hotelregular";
+  font-family: "grand_hotelregular", sans-serif;
   padding-top: 3rem;
   font-size: 6.5rem;
+}
+@media (max-width: 425px) {
+  #page_total h1 {
+    font-size: 80px;
+  }
+}
+@media (max-width: 340px) {
+  #page_total h1 {
+    font-size: 70px;
+  }
 }
 #page_total > #panier_part {
   height: 100%;
 }
 #page_total > #panier_part > table {
-  margin: auto;
+  margin: 5em auto auto;
   width: 50%;
-  margin-top: 5em;
   padding: 1em;
   box-shadow: 0 2px 8px 5px rgba(0, 0, 0, 0.15);
+}
+@media (max-width: 930px) {
+  #page_total > #panier_part > table {
+    width: 80%;
+  }
+}
+@media (max-width: 560px) {
+  #page_total > #panier_part > table {
+    width: 100%;
+  }
+}
+@media (max-width: 450px) {
+  #page_total > #panier_part > table td, #page_total > #panier_part > table th {
+    font-size: 12px;
+  }
+}
+#page_total > #panier_part > table .btn {
+  font-size: 12px;
+  margin-top: 5px;
 }
 #page_total > #form_part {
   height: 100%;
+  margin-bottom: 2em;
 }
 #page_total > #form_part > form {
-  margin: auto;
+  margin: 5em auto auto;
   width: 50%;
-  margin-top: 5em;
   padding: 1em;
   box-shadow: 0 2px 8px 5px rgba(0, 0, 0, 0.15);
 }
+@media (max-width: 930px) {
+  #page_total > #form_part > form {
+    width: 80%;
+  }
+}
+@media (max-width: 560px) {
+  #page_total > #form_part > form {
+    width: auto;
+  }
+}
 #page_total > #message_vide > p {
   font: bold 50px arial, sans-serif;
-  background-color: #565656;
+  font-size: 100px;
   color: transparent;
-  text-shadow: 2px 2px 3px rgba(255, 255, 255, 0.5);
-  -webkit-background-clip: text;
-  -moz-background-clip: text;
+  background-color: #000000;
   background-clip: text;
-  margin-top: 4em;
+  text-shadow: 0 2px 2px #f3f3f3;
+  margin-top: 2em;
+}
+@media (max-width: 607px) {
+  #page_total > #message_vide > p {
+    margin-top: 1em;
+  }
+}
+@media (max-width: 470px) {
+  #page_total > #message_vide > p {
+    font-size: 70px;
+    margin-top: 2em;
+  }
+}
+@media (max-width: 340px) {
+  #page_total > #message_vide > p {
+    font-size: 50px;
+  }
 }
 #page_total > div#validation {
   box-shadow: 0 0 9px 0 rgba(0, 0, 0, 0.75);
   width: 50%;
-  background-color: white;
+  background-color: #ffffff;
+}
+@media (max-width: 820px) {
+  #page_total > div#validation {
+    width: 80%;
+  }
+}
+@media (max-width: 510px) {
+  #page_total > div#validation {
+    width: auto;
+  }
 }
 #page_total > div#validation > h1.h1Cust {
   font-size: 50px;
-  font-family: "fulbo";
+  font-family: "fulbo", sans-serif;
+}
+@media (max-width: 510px) {
+  #page_total > div#validation > h1.h1Cust {
+    font-size: 35px;
+  }
+}
+@media (max-width: 500px) {
+  #page_total > div#validation > h2 {
+    font-size: 25px;
+  }
+}
+@media (max-width: 500px) {
+  #page_total > div#validation > h3 {
+    font-size: 20px;
+  }
 }
 #page_total > div#validation > button.btn > a {
   text-decoration: none;
 }
 
-footer.page-footer {
-  bottom: 0;
+div.footer-copyright.text-center {
+  position: relative;
+  bottom: 10px;
   width: 100%;
   height: 1em;
 }
