--- a/panier/sass/style.scss
+++ b/panier/sass/style.scss
@@ -1,57 +1,137 @@
-@import "../fonts/fonts.scss";
+@font-face {
+  font-family: 'grand_hotelregular';
+  src: url('../fonts/grandhotel/grandhotel-regular-webfont.woff2') format('woff2'),
+  url('../fonts/grandhotel/grandhotel-regular-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'fulbo';
+  src: url('../fonts/fulbo/fulbo-premier-webfont.woff2') format('woff2'),
+  url('../fonts/fulbo/fulbo-premier-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
 
-#page_total{
+$boxShadow: 0 2px 8px 5px rgba(0, 0, 0, 0.15);
+
+#page_total {
   & h1 {
-    font-family: "grand_hotelregular";
+    font-family: "grand_hotelregular", sans-serif;
     padding-top: 3rem;
     font-size: 6.5rem;
+    @media (max-width: 425px) {
+      font-size: 80px;
+    }
+    @media (max-width: 340px) {
+      font-size: 70px;
+    }
   }
+
   & > #panier_part {
     height: 100%;
+
     & > table {
-      margin: auto;
+      margin: 5em auto auto;
       width: 50%;
-      margin-top: 5em;
       padding: 1em;
-      box-shadow: 0 2px 8px 5px rgba(0, 0, 0, 0.15);
+      box-shadow: $boxShadow;
+      @media (max-width: 930px) {
+        width: 80%;
+      }
+      @media (max-width: 560px) {
+        width: 100%;
+      }
+
+      & td, & th {
+        @media (max-width: 450px) {
+          font-size: 12px;
+        }
+      }
+
+      & .btn {
+        font-size: 12px;
+        margin-top: 5px;
+      }
     }
   }
+
   & > #form_part {
     height: 100%;
+    margin-bottom: 2em;
+
     & > form {
-      margin: auto;
+      margin: 5em auto auto;
       width: 50%;
-      margin-top: 5em;
       padding: 1em;
-      box-shadow: 0 2px 8px 5px rgba(0, 0, 0, 0.15);
+      box-shadow: $boxShadow;
+      @media (max-width: 930px) {
+        width: 80%;
+      }
+      @media (max-width: 560px) {
+        width: auto;
+      }
     }
   }
+
   & > #message_vide > p {
     font: bold 50px arial, sans-serif;
-    background-color: #565656;
+    font-size: 100px;
     color: transparent;
-    text-shadow: 2px 2px 3px rgba(255,255,255,0.5);
-    -webkit-background-clip: text;
-    -moz-background-clip: text;
+    background-color: #000000;
     background-clip: text;
-    margin-top: 4em;
+    text-shadow: 0 2px 2px #f3f3f3;
+    margin-top: 2em;
+    @media(max-width: 607px) {
+      margin-top: 1em;
+    }
+    @media (max-width: 470px) {
+      font-size: 70px;
+      margin-top: 2em;
+    }
+    @media (max-width: 340px) {
+      font-size: 50px;
+    }
   }
+
   & > div#validation {
-    box-shadow: 0 0 9px 0 rgba(0,0,0,0.75);
+    box-shadow: 0 0 9px 0 rgba(0, 0, 0, 0.75);
     width: 50%;
-    background-color: white;
+    background-color: #ffffff;
+      @media (max-width: 820px) {
+        width: 80%;
+      }
+      @media (max-width: 510px) {
+        width: auto;
+      }
+
     & > h1.h1Cust {
       font-size: 50px;
-      font-family: "fulbo";
+      font-family: "fulbo", sans-serif;
+        @media (max-width: 510px) {
+          font-size: 35px;
+        }
     }
+    & > h2 {
+      @media (max-width: 500px) {
+        font-size: 25px;
+      }
+    }
+    & > h3 {
+      @media (max-width: 500px) {
+        font-size: 20px;
+      }
+    }
+
     & > button.btn > a {
       text-decoration: none;
     }
   }
 }
 
-footer.page-footer{
-  bottom:0;
+div.footer-copyright.text-center{
+  position: relative;
+  bottom: 10px;
   width:100%;
   height: 1em;
 }
