Finalisation complete du site

--- a/panier/sass/style.scss
+++ b/panier/sass/style.scss
@@ -98,6 +98,7 @@ $boxShadow: 0 2px 8px 5px rgba(0, 0, 0, 0.15);
     box-shadow: 0 0 9px 0 rgba(0, 0, 0, 0.75);
     width: 50%;
     background-color: #ffffff;
+    margin-top: 3em;
       @media (max-width: 820px) {
         width: 80%;
       }
