--- a/css/style.css
+++ b/css/style.css
@@ -63,8 +63,7 @@
 }
 @media (max-width: 800px) {
   #corps_page #cards_container > div.card {
-    margin: auto;
-    margin-top: 1em;
+    margin: 1em auto auto;
     width: 70%;
   }
 }
