--- a/panier/css/style.css
+++ b/panier/css/style.css
@@ -102,6 +102,7 @@
   box-shadow: 0 0 9px 0 rgba(0, 0, 0, 0.75);
   width: 50%;
   background-color: #ffffff;
+  margin-top: 3em;
 }
 @media (max-width: 820px) {
   #page_total > div#validation {
