--- a/product/css/style.css
+++ b/product/css/style.css
@@ -30,6 +30,9 @@ body #page_product > div > #product {
     width: auto;
   }
 }
+body #page_product > div > #product > img {
+  border-radius: 10%;
+}
 body #page_product > div > #personnalisation {
   width: 40%;
   margin: auto;
@@ -41,6 +44,7 @@ body #page_product > div > #personnalisation {
 }
 body #page_product > div > #personnalisation > #lenses_content h2#cameraName.pb-5 {
   font-size: 100px;
+  font-weight: bolder;
 }
 @media (max-width: 930px) {
   body #page_product > div > #personnalisation > #lenses_content h2#cameraName.pb-5 {
@@ -57,7 +61,7 @@ body #page_product > div > #personnalisation > #lenses_content h3 {
 }
 body footer {
   position: fixed;
-  bottom: 0;
+  bottom: 10px;
   width: 100%;
   height: 1em;
 }
