--- a/product/sass/product.scss
+++ b/product/sass/product.scss
@@ -27,6 +27,9 @@ body {
         @media (max-width: 1300px) {
           width: auto;
         }
+        & > img {
+          border-radius: 10%;
+        }
     }
     & > div > #personnalisation {
       width: 40%;
@@ -37,6 +40,7 @@ body {
         & > #lenses_content {
           & h2#cameraName.pb-5{
             font-size: 100px;
+            font-weight: bolder;
               @media (max-width: 930px) {
                 font-size: 50px;
               }
@@ -53,7 +57,7 @@ body {
 
   & footer{
     position: fixed;
-    bottom: 0;
+    bottom: 10px;
     width:100%;
     height: 1em;
       @media (max-width: 1300px) {
