--- a/sass/main.scss
+++ b/sass/main.scss
@@ -56,8 +56,7 @@
         margin: 0 10px 10px 0;
         width: 40%;
         @media (max-width: 800px){
-          margin: auto;
-          margin-top: 1em;
+          margin: 1em auto auto;
           width: 70%;
         }
       }
